--- a/index.html
+++ b/index.html
@@ -12,6 +12,56 @@
         rel="stylesheet">
 </head>
 <body>
-    
+    <!-- Header -->
+    <header class="header">
+        <div class="container">
+            <!-- Navigation -->
+            <nav class="navigation">
+                <ul class="auth-list">
+                    <li class="auth-item">
+                        <a href="#" class="auth-link">Log in</a>
+                    </li>
+                    <li class="auth-item">
+                        <a href="#" class="auth-link" >Sign up</a>
+                    </li>
+                </ul>
+                <a href="./index.html " class="logo">Urlaubsglück</a>
+            </nav>
+            <h1 class="title">Share your holiday dreams</h1>
+            <p class="text">And find the perfect partner to fullfill it </p>
+            <button type="button" class="header-button">Find your holiday partner</button>
+        </div>
+    </header>\
+    <!-- Main -->
+    <main>
+        <section class="section">
+        <div class="container">
+            <h2 class="section-title">Meet a partner for your best holiday</h2>
+            <ul class="partner-list">
+                <li class="partner-item">
+                    <img src="./images/Bradley-H.png" alt="">
+                    <h3 class="partner-name">Bradley Hunter</h3>
+                    <p class="partner-text">Based in Chicago. I love playing tennis and loud music.</p>
+                </li>
+                <li class="partner-item">
+                    <img src="./images/Lucas-M.png" alt="">
+                    <h3 class="partner-name">Lucas Marsha</h3>
+                    <p>I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                </li>
+                <li class="partner-item">
+                    <img src="./images/Heather-W.png" alt="">
+                    <h3 class="partner-name">Heather Walker</h3>
+                    <p>I'm a happy person that loves cats and climbing on mountains.</p>
+                </li>
+                <li class="partner-item">
+                    <img src="./images/Braedly-H.png" alt="">
+                    <h3 class="partner-name">Bradley Hunter</h3>
+                    <p class="partner-text">Based in Chicago. I love playing tennis and loud music.</p>
+                </li>
+            </ul>
+            <button type="button" class="partners-button">See other partners</button>
+        </div>
+    </section>
+    </main>
 </body>
 </html>
